2008-10-11  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp (cirdef): Added 'Material' parameter.

2008-10-09  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp: Applied temperature dependent waveguide model
	provided by Andrea Zonca.  Thanks a lot.

2008-07-17  Stefan Jahn  <stefan@lkcc.org>

	* vprobe.cpp: Fixed bug in the S-parameters of this component.

2008-06-26  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp: Added new rectangular waveguide component provided
	by Bastien.

2008-06-25  Stefan Jahn  <stefan@lkcc.org>

	* amplifier.cpp: Implemented noise figure 'NF' property.

2008-03-31  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp, devices/diac.cpp:
	Improved convergence during transient simulation. Thanks to
	Michael.

2008-02-22  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Implemented T-parameters.

2008-02-21  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Implemented H-, G- and A- parameters.

2008-02-20  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Using extended MNA entries for AC analysis when
	specifying S- or Z-parameters.  Allowing zero-frequency evaluation
	for DC analysis.

2008-02-18  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Obtaining the real equation variable reference name
	instead of constructing the equation name ourselves.

2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp: Added preliminary implementation of an equation
	defined RF device.

2008-01-25  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp: Small fixes in
	implementation.

2008-01-24  Stefan Jahn  <stefan@lkcc.org>

	* devices/thyristor.cpp, devices/triac.cpp: Added preliminary
	implementations of thyristor and triac.

2008-01-18  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.cpp: Fixed memory leak by using new
	setInternalNode() function of the circuit class.

2008-01-16  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.cpp: Parameterized the Diac a bit more.  Added some
	properties.
